Update Algorithms Challenge - Day 4 (Karatsuba).ipynb

--- a/Algorithms Challenge/Algorithms Challenge - Day 4 (Karatsuba).ipynb
+++ b/Algorithms Challenge/Algorithms Challenge - Day 4 (Karatsuba).ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multiplying Polnomials (Fast Divide and Conquer Algorithm: Karatsuba)"
+    "### Multiplying Polynomials (Fast Divide and Conquer Algorithm: Karatsuba)"
    ]
   },
   {
