Update Algorithms Challenge - Day 3 (Greedy 2, Polynomials).ipynb

--- a/Algorithms Challenge/Algorithms Challenge - Day 3 (Greedy 2, Polynomials).ipynb
+++ b/Algorithms Challenge/Algorithms Challenge - Day 3 (Greedy 2, Polynomials).ipynb
@@ -182,7 +182,7 @@
     "\n",
     "def Correction (x): \n",
     "    return (x and (not(x & (x - 1))))\n",
-    "    # Bitwise comparison. Such that 8 is 1000, 7 is 0111.
+    "    # Bitwise comparison. Such that 8 is 1000, 7 is 0111.\n",
     "\n",
     "print(\"Highest degree of two polynoms:\")\n",
     "degree = int(input())\n",
