Update Day 8 - D&C - Number of Inversions.ipynb

--- a/Algorithmic Toolbox/Day 8 - D&C - Number of Inversions.ipynb
+++ b/Algorithmic Toolbox/Day 8 - D&C - Number of Inversions.ipynb
@@ -73,11 +73,10 @@
     "def compute_inversions(a):\n",
     "    assert len(a) <= 30000\n",
     "    global count\n",
-    "    count = merge_sort(a)[1]\n",
-    "    return count\n",
+    "    count = 0\n",
+    "    return merge_sort(a)[1]\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    count = 0\n",
     "    elements = list(map(int, input().split()))\n",
     "    print(compute_inversions(elements))"
    ]
