Update Day 1 - Warm Up.ipynb

--- a/Algorithmic Toolbox/Day 1 - Warm Up.ipynb
+++ b/Algorithmic Toolbox/Day 1 - Warm Up.ipynb
@@ -89,6 +89,19 @@
     "    sorted_numbers = sorted(numbers, reverse = True)\n",
     "    return sorted_numbers[0] * sorted_numbers[1]\n",
     "\n",
+    "def max_pairwise_product2(numbers):\n",
+    "    assert len(numbers) >= 2\n",
+    "    assert all(0 <= x <= 2 * 10 ** 5 for x in numbers)\n",
+    "    first = 0\n",
+    "    for i in range(len(numbers)):\n",
+    "        if numbers[i] > first:\n",
+    "            first = numbers[i]\n",
+    "    second = 0\n",
+    "    for j in range(len(numbers)):\n",
+    "        if numbers[j] > second and numbers[j] != first:\n",
+    "            second = numbers[j]\n",
+    "    return first * second\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    n = int(input())\n",
     "    input_numbers = list(map(int, input().split()))\n",
