Update Day 1 - Warm Up.ipynb

--- a/Algorithmic Toolbox/Day 1 - Warm Up.ipynb
+++ b/Algorithmic Toolbox/Day 1 - Warm Up.ipynb
@@ -92,15 +92,15 @@
     "def max_pairwise_product2(numbers):\n",
     "    assert len(numbers) >= 2\n",
     "    assert all(0 <= x <= 2 * 10 ** 5 for x in numbers)\n",
-    "    first = 0\n",
+    "    index1 = 0\n",
     "    for i in range(len(numbers)):\n",
-    "        if numbers[i] > first:\n",
-    "            first = numbers[i]\n",
-    "    second = 0\n",
+    "        if numbers[i] > numbers[index1]:\n",
+    "            index1 = i\n",
+    "    index2 = 0\n",
     "    for j in range(len(numbers)):\n",
-    "        if numbers[j] > second and numbers[j] != first:\n",
-    "            second = numbers[j]\n",
-    "    return first * second\n",
+    "        if numbers[j] > numbers[index2] and j != index1:\n",
+    "            index2 = j\n",
+    "    return numbers[index1] * numbers[index2]\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    n = int(input())\n",
