Update D&C - Closest Points EDIT.ipynb

--- a/Algorithmic Toolbox/D&C - Closest Points EDIT.ipynb
+++ b/Algorithmic Toolbox/D&C - Closest Points EDIT.ipynb
@@ -83,8 +83,7 @@
     "def minimum_distance_squared_naive(points):\n",
     "    min_distance_squared = float(\"inf\")\n",
     "    for p, q in combinations(points, 2):\n",
-    "        min_distance_squared = min(min_distance_squared,\n",
-    "                                   distance_calculator(p, q))\n",
+    "        min_distance_squared = min(min_distance_squared, distance_calculator(p, q))\n",
     "    return min_distance_squared\n",
     "\n",
     "def partition3(A, l, r):\n",
