Update D&C - Closest Points EDIT.ipynb

--- a/Algorithmic Toolbox/D&C - Closest Points EDIT.ipynb
+++ b/Algorithmic Toolbox/D&C - Closest Points EDIT.ipynb
@@ -247,7 +247,7 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)"
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m"
      ]
     }
    ],
