Update 11 - D&C - Closest Points.ipynb

--- a/Algorithmic Toolbox/11 - D&C - Closest Points.ipynb
+++ b/Algorithmic Toolbox/11 - D&C - Closest Points.ipynb
@@ -238,27 +238,7 @@
       "[[72, 0], [96, 61], [64, 58], [87, 26], [82, 5], [87, 87], [67, 97], [15, 87], [96, 80], [77, 60], [59, 72], [5, 49], [25, 22], [15, 40], [18, 45], [2, 80], [21, 97], [90, 31], [28, 82], [69, 34]]\n",
       "OK result1, result2 =  5.830951894845301\n",
       "[[15, 84], [62, 77], [14, 75], [87, 5], [71, 22], [4, 40], [52, 44], [39, 42], [9, 96], [72, 15], [37, 46], [57, 3], [43, 55], [11, 19], [91, 63], [9, 10], [33, 17], [98, 99], [97, 9], [87, 98]]\n",
-      "OK result1, result2 =  4.47213595499958\n",
-      "[[9, 16], [14, 91], [35, 17], [72, 30], [86, 52], [72, 96], [36, 42], [84, 86], [53, 89], [61, 81], [41, 18], [97, 17], [78, 85], [22, 89], [28, 58], [44, 63], [48, 100], [19, 60], [1, 71], [56, 47]]\n",
-      "OK result1, result2 =  6.082762530298219\n",
-      "[[90, 73], [35, 84], [20, 63], [39, 13], [35, 78], [77, 10], [91, 3], [17, 42], [35, 43], [100, 2], [38, 68], [12, 70], [84, 52], [93, 87], [67, 8], [79, 61], [39, 22], [12, 13], [59, 39], [52, 3]]\n",
-      "OK result1, result2 =  6.0\n",
-      "[[37, 23], [2, 65], [61, 29], [67, 45], [54, 12], [93, 83], [1, 18], [78, 17], [65, 5], [100, 19], [100, 28], [52, 2], [1, 51], [41, 35], [83, 91], [39, 32], [54, 64], [93, 61], [100, 30], [29, 52]]\n",
-      "OK result1, result2 =  2.0\n",
-      "[[52, 48], [43, 48], [4, 37], [20, 69], [49, 77], [31, 79], [83, 8], [77, 80], [98, 55], [96, 72], [6, 74], [19, 69], [48, 16], [27, 88], [89, 30], [4, 4], [22, 86], [58, 18], [88, 0], [44, 64]]\n",
-      "OK result1, result2 =  1.0\n",
-      "[[18, 95], [19, 98], [8, 21], [99, 2], [38, 51], [61, 13], [78, 99], [90, 8], [95, 1], [85, 98], [76, 46], [29, 1], [85, 97], [86, 23], [69, 21], [1, 57], [1, 50], [80, 37], [75, 53], [18, 92]]\n",
-      "OK result1, result2 =  1.0\n",
-      "[[87, 77], [64, 57], [22, 25], [89, 73], [39, 21], [51, 1], [1, 48], [40, 6], [93, 33], [79, 33], [31, 79], [30, 44], [14, 53], [69, 42], [76, 43], [90, 54], [98, 70], [2, 51], [87, 59], [56, 91]]\n",
-      "OK result1, result2 =  3.1622776601683795\n",
-      "[[81, 77], [19, 62], [40, 49], [4, 45], [43, 23], [100, 35], [0, 42], [62, 21], [39, 43], [50, 19], [12, 96], [9, 27], [84, 8], [60, 71], [95, 91], [26, 65], [84, 65], [55, 53], [17, 56], [2, 95]]\n",
-      "OK result1, result2 =  5.0\n",
-      "[[92, 57], [76, 95], [4, 26], [66, 67], [15, 22], [20, 91], [22, 49], [35, 97], [10, 16], [77, 19], [15, 47], [95, 82], [75, 94], [73, 92], [46, 69], [69, 82], [54, 92], [83, 16], [83, 29], [84, 92]]\n",
-      "OK result1, result2 =  1.4142135623730951\n",
-      "[[12, 3], [2, 43], [67, 74], [64, 59], [70, 22], [64, 92], [21, 56], [50, 75], [0, 4], [41, 37], [43, 66], [46, 44], [16, 85], [61, 91], [59, 18], [97, 43], [38, 44], [59, 0], [75, 88], [88, 22]]\n",
-      "OK result1, result2 =  3.1622776601683795\n",
-      "[[35, 57], [55, 5], [6, 52], [9, 73], [21, 58], [69, 86], [69, 31], [5, 90], [38, 57], [30, 44], [13, 41], [84, 69], [59, 40], [73, 0], [63, 46], [2, 18], [63, 38], [99, 5], [48, 80], [21, 50]]\n",
-      "OK result1, result2 =  3.0\n"
+      "OK result1, result2 =  4.47213595499958\n"
      ]
     },
     {
@@ -266,7 +246,7 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m "
      ]
     }
    ],
