Update 9 - D&C - Organizing Lottery.ipynb

--- a/Algorithmic Toolbox/9 - D&C - Organizing Lottery.ipynb
+++ b/Algorithmic Toolbox/9 - D&C - Organizing Lottery.ipynb
@@ -367,7 +367,7 @@
       "[873, 695, 855, 929, 263, 947, 655, 279, 450, 811]\n",
       "[910, 355, 692, 919, 525, 62, 763, 72, 998, 450, 156, 422, 990, 761, 775, 718, 275, 720, 437]\n",
       "points: [910, 355, 692, 919, 525, 62, 763, 72, 998, 450, 156, 422, 990, 761, 775, 718, 275, 720, 437]\n",
-      "OK result1, result2 =  [2, 7, 7, 2, 5, 0, 6, 0, 0, 6, 1, 6, 0, 6, 6, 6, 4, 6, 6]\n",
+      "OK result1, result2 =  [2, 7, 7, 2, 5, 0, 6, 0, 0, 6, 1, 6, 0, 6, 6, 6, 4, 6, 6]\n"
      ]
     },
     {
