Update 2 - Greedy Algorithms.ipynb

--- a/Algorithmic Toolbox/2 - Greedy Algorithms.ipynb
+++ b/Algorithmic Toolbox/2 - Greedy Algorithms.ipynb
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Maximum Value of the Loot\n",
+    "### Maximum Value of the Loot (Fractional Knapsack Problem)\n",
     "\n",
     "\n",
     "Given the capacity of a backpack\n",
@@ -295,7 +295,6 @@
     "        if capacity - sorted_dictionary[i][0] >= 0:\n",
     "            capacity -= sorted_dictionary[i][0]\n",
     "            amount += sorted_dictionary[i][0] * sorted_dictionary[i][1]\n",
-    "            i += 1\n",
     "            continue\n",
     "        amount += capacity * sorted_dictionary[i][1]\n",
     "        break\n",
