Update 3 - Divide and Conquer Algorithms.ipynb

--- a/Algorithmic Toolbox/3 - Divide and Conquer Algorithms.ipynb
+++ b/Algorithmic Toolbox/3 - Divide and Conquer Algorithms.ipynb
@@ -1888,16 +1888,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Personal Note:\n",
+    "       Personal Note:\n",
     "       \n",
     "       It seems that the running time of the algorithm is always less than 5 seconds.\n",
     "       It is satisfactory for the task but it can change due to the RAM of the PC.\n",
     "       Since it is around 5 seconds, for less powerful PCs, running time will increase.\n",
     "       In the algorithm I designed above, the complexity must be O(n*(logn)^2).\n",
-    "       However, I guess it is O(n*(logn)^m) where m > 2 in my algorithm. But I haven't found what part causes m to increase.\n",
+    "       However, I guess it is O(n*(log(n))^m) where m > 2 in my algorithm. But I haven't found what part causes m to increase.\n",
     "       \n",
     "       Below is another algorithm I found from the internet, which is working in O(n*(logn)^2).\n",
-    "       It looks like my algorithm, the logic is the same, but I don't know why running times are different."
+    "       It looks like my algorithm, the logic is the same, but my algorithm should be optimized a bit."
    ]
   },
   {
