Update 1 - Basic Data Structures.ipynb

--- a/Data Structures/1 - Basic Data Structures.ipynb
+++ b/Data Structures/1 - Basic Data Structures.ipynb
@@ -619,21 +619,21 @@
     "        elif s[i] not in [')','}',']']:\n",
     "            continue\n",
     "        elif len(stack) == 0:\n",
-    "            #print(f'closing bracket {s[i]} at index {i}')\n",
-    "            return i\n",
+    "            #print(f'closing bracket {s[i]} at index {i + 1}')\n",
+    "            return i + 1\n",
     "        else:\n",
     "            index = stack.pop()\n",
     "            x = stack.pop()\n",
     "            if (x == '(' and s[i] != ')') or (x == '{' and s[i] != '}') or (x == '[' and s[i] != ']'):\n",
-    "                #print(f'closing bracket {s[i]} at index {i} dismatches with opening bracket {x} at index {index}')\n",
-    "                return i\n",
+    "                #print(f'closing bracket {s[i]} at index {i + 1} dismatches with opening bracket {x} at index {index + 1}')\n",
+    "                return i + 1\n",
     "            #print('match:', x, s[i])\n",
     "            #print('stack', stack)\n",
     "    if len(stack) == 0:\n",
     "        return \"Success\"\n",
     "    else:\n",
-    "        #print(f'opening bracket {stack[0]} at index {stack[1]}')\n",
-    "        return stack.pop()"
+    "        #print(f'opening bracket {stack[0]} at index {stack[1] + 1}')\n",
+    "        return stack.pop() + 1"
    ]
   },
   {
