Update 3 - Divide and Conquer Algorithms.ipynb

--- a/Algorithmic Toolbox/3 - Divide and Conquer Algorithms.ipynb
+++ b/Algorithmic Toolbox/3 - Divide and Conquer Algorithms.ipynb
@@ -1894,93 +1894,7 @@
     "       It is satisfactory for the task but it can change due to the RAM of the PC.\n",
     "       Since it is around 5 seconds, for less powerful PCs, running time will increase.\n",
     "       In the algorithm I designed above, the complexity must be O(n*(logn)^2).\n",
-    "       However, I guess it is O(n*(log(n))^m) where m > 2 in my algorithm. But I haven't found what part causes m to increase.\n",
-    "       \n",
-    "       Below is another algorithm I found from the internet, which is working in O(n*(logn)^2).\n",
-    "       It looks like my algorithm, the logic is the same, but my algorithm should be optimized a bit."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "import copy\n",
-    "class Point():\n",
-    "    def __init__(self, x, y):\n",
-    "        self.x = x\n",
-    "        self.y = y\n",
-    "def dist(p1, p2):\n",
-    "    return math.sqrt((p1.x - p2.x) * (p1.x - p2.x) + (p1.y - p2.y) * (p1.y - p2.y))\n",
-    "def bruteForce(P, n):\n",
-    "    min_val = float('inf')\n",
-    "    for i in range(n):\n",
-    "        for j in range(i + 1, n):\n",
-    "            if dist(P[i], P[j]) < min_val:\n",
-    "                min_val = dist(P[i], P[j])\n",
-    "    return min_val\n",
-    "def stripClosest(strip, size, d):\n",
-    "    min_val = d\n",
-    "    for i in range(size):\n",
-    "        j = i + 1\n",
-    "        while j < size and (strip[j].y - strip[i].y) < min_val:\n",
-    "            min_val = dist(strip[i], strip[j])\n",
-    "            j += 1\n",
-    "    return min_val\n",
-    "def closestUtil(P, Q, n):\n",
-    "    if n <= 3:\n",
-    "        return bruteForce(P, n)\n",
-    "    mid = n // 2\n",
-    "    midPoint = P[mid]\n",
-    "    Pl = P[:mid]\n",
-    "    Pr = P[mid:]\n",
-    "    dl = closestUtil(Pl, Q, mid)\n",
-    "    dr = closestUtil(Pr, Q, n - mid)\n",
-    "    d = min(dl, dr)\n",
-    "    stripP = []\n",
-    "    stripQ = []\n",
-    "    lr = Pl + Pr\n",
-    "    for i in range(n):\n",
-    "        if abs(lr[i].x - midPoint.x) < d:\n",
-    "            stripP.append(lr[i])\n",
-    "        if abs(Q[i].x - midPoint.x) < d:\n",
-    "            stripQ.append(Q[i])\n",
-    "    stripP.sort(key = lambda point: point.y)\n",
-    "    min_a = min(d, stripClosest(stripP, len(stripP), d))\n",
-    "    min_b = min(d, stripClosest(stripQ, len(stripQ), d))\n",
-    "    return min(min_a,min_b)\n",
-    "def closest(P, n):\n",
-    "    P.sort(key = lambda point: point.x)\n",
-    "    Q = copy.deepcopy(P)\n",
-    "    Q.sort(key = lambda point: point.y)   \n",
-    "    return closestUtil(P, Q, n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.0286169052124023 seconds\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "import time\n",
-    "P = []\n",
-    "for i in range(100000):\n",
-    "    P.append(Point(random.randint(0,100000000), random.randint(0,100000000)))\n",
-    "n = len(P)\n",
-    "s = time.time()\n",
-    "x = closest(P, n)\n",
-    "print(time.time() - s,'seconds')"
+    "       However, I guess it is O(n*(log(n))^m) where m > 2 in my algorithm. But I haven't found what part causes m to increase.\n"
    ]
   }
  ],
