Update 4 - Dynamic Programming.ipynb

--- a/Algorithmic Toolbox/4 - Dynamic Programming.ipynb
+++ b/Algorithmic Toolbox/4 - Dynamic Programming.ipynb
@@ -1963,11 +1963,9 @@
     "The cost of multiplying two matrices of size\n",
     "$p \\times q$ and $q \\times r$ is $pqr$\n",
     "\n",
-    "$ $\n",
+    "**Input**: Chain of $n$ matrices $A_0, \\dotsc , A_{n−1}$ to be multiplied.\n",
     "\n",
-    "Input: Chain of $n$ matrices $A_0, \\dotsc , A_{n−1}$ to be multiplied.\n",
-    "\n",
-    "Output: An order of multiplication minimizing the total cost of multiplication."
+    "**Output**: An order of multiplication minimizing the total cost of multiplication."
    ]
   },
   {
