--- a/Data Structures/1 - Basic Data Structures.ipynb
+++ b/Data Structures/1 - Basic Data Structures.ipynb
@@ -660,7 +660,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compute tree height"
+    "### Compute Tree Height"
    ]
   },
   {
