Update Paths in Graphs.ipynb

--- a/Algorithms on Graphs/2 - Paths in Graphs/Paths in Graphs.ipynb
+++ b/Algorithms on Graphs/2 - Paths in Graphs/Paths in Graphs.ipynb
@@ -385,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Alternative solution of Dijkstra's Algorithm by using heapdict() function."
+    "    Alternative solution for Dijkstra's Algorithm by using heapdict() function."
    ]
   },
   {
